tests/models/struct/named/string/pass/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = "val")]
    value: String,
}
fn main() {}
