tests/models/struct/named/string/fail/gt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(gt = 2)]
    value: String,
}
fn main() {}
